2009-08-10  Lluis Sanchez Gual  <lluis@novell.com>

	* md1format.xml: Updated field names for ProjectConfiguration.

2009-08-10  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Formats.MSBuild\MSBuildProjectHandler.cs:
	  Track api changes.

	* MonoDevelop.Projects.Formats.MSBuild\MSBuildProjectService.cs:
	  Properly dispose project builders.

2009-08-07  Viktoria Dudka  <viktoriad@remobjects.com>

	* MonoDevelop.Projects/ProjectConfiguration.cs: Rewritten from scratch
	  to make it NON-GPL.
	  
2009-08-10  Viktoria Dudka  <viktoriad@remobjects.com>

	* MonoDevelop.Projects/IDotNetLanguageBinding.cs: Rewrittent from
	  scratch to make it NON-GPL.

2009-08-07  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/DotNetProject.cs: After loading a
	  project, reset any previously allocated resource handler,
	  since the naming policy may have changed. Fixes bug #481898.

2009-08-07  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/ProjectService.cs:
	* MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs:
	  Fix type counters.

	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectHandler.cs:
	  Fix memory leak caused by unsubscribed event.

2009-08-06  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/Solution.cs:
	* MonoDevelop.Projects/ProjectService.cs:
	* MonoDevelop.Projects/SolutionEntityItem.cs:
	* MonoDevelop.Projects.Dom.Parser/ProjectDomService.cs:
	* MonoDevelop.Projects.Dom.Serialization/CodeCompletionDatabase.cs:
	* MonoDevelop.Projects.Dom.Serialization/ProjectCodeCompletionDatabase.cs:
	* MonoDevelop.Projects.Dom.Serialization/AssemblyCodeCompletionDatabase.cs:
	  Added some counters.

2009-08-05  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects.Dom/DomReturnType.cs: Added bool as
	  static return type.

2009-08-05  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/ProjectService.cs:
	* MonoDevelop.Projects/SolutionConfiguration.cs: Updated